--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         let NEWS_DB = [];
 
         const FLEET = [
-            { type: "Airbus A319", maxHours: 5, seats: 138, engines: "CFM56-5B", speed: "M0.78", ceiling: "39,000 ft", operators: ["Lufthansa", "SWISS", "Austrian", "Brussels", "Air Dolomiti"], map: "https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/A319_seat_map.svg/1024px-A319_seat_map.svg.png" },
+            { type: "Airbus A319", maxHours: 5, seats: 138, engines: "CFM56-5B", speed: "M0.78", ceiling: "39,000 ft", operators: ["Lufthansa", "SWISS", "Austrian", "Brussels", "Air Dolomiti"], map: "https://www.lufthansa.com/content/dam/lh/images/local_variations/seatmaps/ru/202110-A319-nose-RU.jpg" },
             { type: "Airbus A320neo", maxHours: 6, seats: 180, engines: "LEAP-1A", speed: "M0.78", ceiling: "39,800 ft", operators: ["Lufthansa", "Eurowings", "SAS", "Austrian", "Brussels"], map: "https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/A320_seat_map.svg/300px-A320_seat_map.svg.png" },
             { type: "Airbus A220-300", maxHours: 6.5, seats: 145, engines: "PW1500G", speed: "M0.78", ceiling: "41,000 ft", operators: ["SWISS", "AirBaltic"], map: "https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/A220-300_seat_map.svg/300px-A220-300_seat_map.svg.png" },
             { type: "Airbus A330-300", maxHours: 11, seats: 255, engines: "Trent 700", speed: "M0.82", ceiling: "41,000 ft", operators: ["Lufthansa", "SWISS", "Austrian", "Brussels"], map: "https://upload.wikimedia.org/wikipedia/commons/thumb/b/b3/A330-300_seat_map.svg/300px-A330-300_seat_map.svg.png" },
