Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 <div id="intro">
     <div class="intro-overlay"></div>
     <div class="intro-img-container">
-        <img src="https://sun9-42.userapi.com/impg/uThH47uoGflyHye_oXaJSe6l8JXYjc-TfvbGjQ/-1MUO6GzfPQ.jpg?size=1200x1087&quality=95&sign=d195de5d9fcadaf74bf347207e3e56fb&type=album" class="intro-meme-img" alt="Sudden Louie">
+        <img src="ВСТАВЬТЕ_СЮДА_ССЫЛКУ_НА_ФОТО" class="intro-meme-img" alt="Sudden Louie">
         <div class="meme-text-overlay">Внезапный Луи</div>
     </div>
     <div class="boot-console">
