Update pilot information in index.html

--- a/index.html
+++ b/index.html
@@ -386,9 +386,9 @@
     const DB = {
         // === PILOTS ===
         PILOTS: [
-            { id: "DLH001", pwd: "1234", name: "Capt. Mueller", rank: "Captain", base: "EDDF" },
-            { id: "DLH002", pwd: "1234", name: "F.O. Weber", rank: "First Officer", base: "EDDM" },
-            { id: "LX088", pwd: "1234", name: "Capt. Gerber", rank: "Captain", base: "LSZH" }
+            { id: "DLH001", pwd: "1234", name: "Nikita", rank: "Captain", base: "EDDF" },
+            { id: "DLH002", pwd: "1234", name: "Loui", rank: "First Officer", base: "EDDM" },
+            { id: "LX088", pwd: "1234", name: "Artem", rank: "Captain", base: "LSZH" }
         ],
 
         // === AIRLINES ===
