Update pilot information and news section

--- a/index.html
+++ b/index.html
@@ -405,9 +405,9 @@
 <script>
     const DB = {
         PILOTS: [
-            { id: "DLH001", pwd: "1234", name: "Capt. Mueller", rank: "Captain", base: "EDDF" },
-            { id: "DLH002", pwd: "1234", name: "F.O. Weber", rank: "First Officer", base: "EDDM" },
-            { id: "LX088", pwd: "1234", name: "Capt. Gerber", rank: "Captain", base: "LSZH" }
+            { id: "DLH001", pwd: "1234", name: "Nikita", rank: "Manager", base: "EDDF" },
+            { id: "DLH002", pwd: "1234", name: "Loui", rank: "Leader", base: "EDDM" },
+            { id: "LX088", pwd: "1234", name: "Artem", rank: "Pilot", base: "LSZH" }
         ],
 
         AIRLINES: [
@@ -427,7 +427,7 @@
             "LOWW": ["C31", "C33", "C35", "C37", "C39", "C41", "D21", "D23", "D25", "D27", "D29", "F01", "F03", "F05", "F07", "F09", "F11", "F13", "F15", "F21", "F23", "F27", "F31", "F33", "F35", "G01", "G03", "G11", "G15", "G21"]
         },
 
-        NEWS: [ { t: "System Update v98", d: "Enhanced UI for Flight Schedule: Status indicators enlarged for better visibility." }, { t: "Winter Operations", d: "De-icing mandatory at stations < 3°C." } ],
+        NEWS: [ { t: "Lufthansa Helper 2.0", d: "Lufthansa Group first web site up to date." }, { t: "New VK post out now", d: "Lufthansa Group comunity posted a new post." } ],
         
         FLEET: [
             { id: "A320L", t: "Airbus A320neo", op: "Lufthansa", s: 180, r: "6h 30m", fuel: "19.0t", cat: "Snack" },
