Add Airbus A220-300 entries to fleet data

--- a/index.html
+++ b/index.html
@@ -430,7 +430,9 @@
         NEWS: [ { t: "Lufthansa Helper 2.0", d: "Lufthansa Group first web site up to date." }, { t: "New VK post out now", d: "Lufthansa Group comunity posted a new post." } ],
         
         FLEET: [
-            { id: "A320L", t: "Airbus A320neo", op: "Lufthansa", s: 180, r: "6h 30m", fuel: "19.0t", cat: "Snack" },
+            { id: "A223", t: "Airbus A220-300", op: "AirBaltic", s: 149, r: "9h 13m", fuel: "17.4t", cat: "149" },
+            { id: "A223", t: "Airbus A220-300", op: "ITA Airways", s: 149, r: "9h 13m", fuel: "17.4t", cat: "149" },
+            { id: "A223", t: "Airbus A220-300", op: "SWISS Airlines", s: 149, r: "9h 13m", fuel: "17.4t", cat: "149" },
             { id: "B748", t: "Boeing 747-8", op: "Lufthansa", s: 364, r: "14h 30m", fuel: "195.0t", cat: "Full Service" },
             { id: "A359", t: "Airbus A350-900", op: "Lufthansa", s: 293, r: "16h 00m", fuel: "110.0t", cat: "Full Service" },
             { id: "A333", t: "Airbus A330-300", op: "Swiss", s: 236, r: "10h 30m", fuel: "75.0t", cat: "Hot Meal" },
