--- a/index.html
+++ b/index.html
@@ -407,7 +407,14 @@
         PILOTS: [
             { id: "DLH001", pwd: "1234", name: "Nikita", rank: "Manager", base: "EDDF" },
             { id: "DLH002", pwd: "1234", name: "Loui", rank: "Leader", base: "EDDM" },
-            { id: "LX088", pwd: "1234", name: "Artem", rank: "Pilot", base: "LSZH" }
+            { id: "LX088", pwd: "1234", name: "Artem", rank: "Pilot", base: "LSZH" },
+            { id: "LX088", pwd: "1234", name: "Artem", rank: "Pilot", base: "LSZH" },
+            { id: "LX088", pwd: "1234", name: "Artem", rank: "Pilot", base: "LSZH" },
+            { id: "LX088", pwd: "1234", name: "Artem", rank: "Pilot", base: "LSZH" },
+            { id: "LX088", pwd: "1234", name: "Artem", rank: "Pilot", base: "LSZH" },
+            { id: "LX088", pwd: "1234", name: "Artem", rank: "Pilot", base: "LSZH" },
+            { id: "LX088", pwd: "1234", name: "Artem", rank: "Pilot", base: "LSZH" },
+        
         ],
 
         AIRLINES: [
@@ -433,14 +440,7 @@
             { id: "A223", t: "Airbus A220-300", op: "AirBaltic", s: 149, r: "9h 13m", fuel: "17.4t", cat: "149" },
             { id: "A223", t: "Airbus A220-300", op: "ITA Airways", s: 149, r: "9h 13m", fuel: "17.4t", cat: "149" },
             { id: "A223", t: "Airbus A220-300", op: "SWISS Airlines", s: 149, r: "9h 13m", fuel: "17.4t", cat: "149" },
-            { id: "B748", t: "Boeing 747-8", op: "Lufthansa", s: 364, r: "14h 30m", fuel: "195.0t", cat: "Full Service" },
-            { id: "A359", t: "Airbus A350-900", op: "Lufthansa", s: 293, r: "16h 00m", fuel: "110.0t", cat: "Full Service" },
-            { id: "A333", t: "Airbus A330-300", op: "Swiss", s: 236, r: "10h 30m", fuel: "75.0t", cat: "Hot Meal" },
-            { id: "B77W", t: "Boeing 777-300ER", op: "Swiss", s: 340, r: "15h 00m", fuel: "145.0t", cat: "Full Service" },
-            { id: "A223", t: "Airbus A220-300", op: "Swiss", s: 145, r: "6h 00m", fuel: "17.0t", cat: "Snack" },
-            { id: "B789", t: "Boeing 787-9", op: "Austrian", s: 294, r: "14h 00m", fuel: "101.0t", cat: "Full Service" },
-            { id: "BCS3", t: "Airbus A220-300", op: "AirBaltic", s: 145, r: "6h 00m", fuel: "17.5t", cat: "Buy on Board" },
-            { id: "A320E", t: "Airbus A320-200", op: "Eurowings", s: 174, r: "5h 00m", fuel: "18.5t", cat: "Buy on Board" }
+
         ],
         ROUTES: [
             { al: "Lufthansa", d: "EDDF", a: "EGLL", t: 1.5, ac: "A320L", fuel: "5.8t", s: "Active" },
