Replace duplicate pilot entries with new names

--- a/index.html
+++ b/index.html
@@ -408,12 +408,16 @@
             { id: "DLH001", pwd: "1234", name: "Nikita", rank: "Manager", base: "EDDF" },
             { id: "DLH002", pwd: "1234", name: "Loui", rank: "Leader", base: "EDDM" },
             { id: "LX088", pwd: "1234", name: "Artem", rank: "Pilot", base: "LSZH" },
-            { id: "LX088", pwd: "1234", name: "Artem", rank: "Pilot", base: "LSZH" },
-            { id: "LX088", pwd: "1234", name: "Artem", rank: "Pilot", base: "LSZH" },
-            { id: "LX088", pwd: "1234", name: "Artem", rank: "Pilot", base: "LSZH" },
-            { id: "LX088", pwd: "1234", name: "Artem", rank: "Pilot", base: "LSZH" },
-            { id: "LX088", pwd: "1234", name: "Artem", rank: "Pilot", base: "LSZH" },
-            { id: "LX088", pwd: "1234", name: "Artem", rank: "Pilot", base: "LSZH" },
+            { id: "LX088", pwd: "1234", name: "Evgeny", rank: "Pilot", base: "LSZH" },
+            { id: "LX088", pwd: "1234", name: "Mikhail", rank: "Pilot", base: "LSZH" },
+            { id: "LX088", pwd: "1234", name: "Nick", rank: "Pilot", base: "LSZH" },
+            { id: "LX088", pwd: "1234", name: "Ser", rank: "Pilot", base: "LSZH" },
+            { id: "LX088", pwd: "1234", name: "Vova", rank: "Pilot", base: "LSZH" },
+            { id: "LX088", pwd: "1234", name: "Nikolay", rank: "Pilot", base: "LSZH" },
+            { id: "LX088", pwd: "1234", name: "Vi", rank: "Pilot", base: "LSZH" },
+            { id: "LX088", pwd: "1234", name: "Zlodey", rank: "Pilot", base: "LSZH" },
+            { id: "LX088", pwd: "1234", name: "Vladimir", rank: "Pilot", base: "LSZH" },
+            { id: "LX088", pwd: "1234", name: "Vlad", rank: "Pilot", base: "LSZH" },
         
         ],
 
