--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
         FLEET: [
             { id: "A223", t: "Airbus A220-300", op: "AirBaltic", s: 149, r: "9h 13m", fuel: "17.4t", cat: "149" },
             { id: "A223", t: "Airbus A220-300", op: "ITA Airways", s: 149, r: "9h 13m", fuel: "17.4t", cat: "149" },
-            { id: "A223", t: "Airbus A220-300", op: "SWISS Airlines", s: 149, r: "9h 13m", fuel: "17.4t", cat: "149" },
+            { id: "A223", t: "Airbus A220-300", op: "Swiss", s: 149, r: "9h 13m", fuel: "17.4t", cat: "149" },
 
         ],
         ROUTES: [
